resolve horizontal overflow by updating grid to responsive aouto-fitlayout

--- a/index.css
+++ b/index.css
@@ -128,7 +128,7 @@
 
 .special__grid {
   display: grid;
-  grid-template-columns: repeat(3, minmax(0, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
   justify-content: center;
   gap: 25px;
 
